environments/dev/microservices/user-service/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  annotations:
    deployment.kubernetes.io/revision: "1"
spec:
  template:
    spec:
      containers:
        - name: user-service
          resources:
            requests:
              memory: "512Mi"
              cpu: "200m"
            limits:
              memory: "1Gi"
              cpu: "500m"
